# jungle-chess-web

./: README.md  build.sh
docs/: index.html  main.js  style.css
native/: Cargo.toml  index.js
native/src/: lib.rs
web/: index.html  package.json  webpack.config.js
web/src/: index.js
web/src/styles/: _messages.scss  _to_turn.scss  _variables.scss  style.scss
web/src/styles/board/: _board.scss
